--- a/front/public/index.html
+++ b/front/public/index.html
@@ -17,12 +17,12 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <title>Otazune</title>
+    <title>OTAZUNE</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="font-weight: 600;">Otazune</a>
+        <a class="navbar-brand" href="#" style="font-weight: 600;">OTAZUNE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,7 +36,47 @@
       </div>
     </nav>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="container mt-5"></div>
+    <div id="root" class="container mt-5 mb-5"></div>
   </body>
+  <footer class="footer">
+    <div class="md-flex md-justify-between">
+      <div>
+      <h5 href="#" class="footer__logo" style="font-weight: 600;">
+        OTAZUNE
+      </h5>
+      <address class="footer__address">
+        ULTRA ODAMURA Inc.<br />
+        〒XXX-XXXX 東京都新宿区西新宿X-X-XX<br />
+        TEL：<a href="tel:">0120-123-456</a> / FAX：0120-123-456<br />
+      </address>
+      </div>
+      <div class="grid">
+        <div>
+          <p class="footer__navi-heading">SERVICE</p>
+          <ul class="footer__navi">
+            <li><a href="#">OTAZUNE</a></li>
+            <li><a href="#">準備中...</a></li>
+          </ul>
+        </div>
+        <div>
+          <p class="footer__navi-heading">FOLLOW US</p>
+          <ul class="footer__navi">
+            <li><a href="#">X</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
+        </div>
+        <div>
+          <p class="footer__navi-heading">ABOUT</p>
+          <ul class="footer__navi">
+            <li><a href="#">お問い合わせ</a></li>
+            <li><a href="#">プライバシーポリシー</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <p class="copyright">© 2024 <a href="#">ULTRA ODAMURA Inc.</a> All Rights Reserved.
+    </p>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </html>
